🛠️ Fixed nav overlapping

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -58,14 +58,20 @@
 
 :global(html, body) {
     max-width: 100vw;
-    min-height: 100%;
     color-scheme: dark light;
 
     color: var(--theme-text);
 }
 
+:global(html) {
+    height: 100%;
+    overflow-y: auto;
+}
+
 :global(body) {
     min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 :global(html) {
